# bookstore

./: db.sqlite3  manage.py  pyproject.toml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: factories.py
order/tests/test_serializers/: test_order_serializer.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializer.py
product/tests/: factories.py  tests.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewset/: product_viewset.py
